# ChangeLog for sys-boot/syslinux
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.43 2009/04/29 15:51:18 jer Exp $

*syslinux-3.75 (29 Apr 2009)

  29 Apr 2009; Jeroen Roovers <jer@gentoo.org> +syslinux-3.75.ebuild:
  Version bump.

  21 Dec 2008; <solar@gentoo.org> files/syslinux-3.72-nopie.patch,
  syslinux-3.72.ebuild:
  - fix pie support and use local installer

  21 Dec 2008; Markus Meier <maekke@gentoo.org> syslinux-3.71.ebuild:
  x86 stable, bug #251816

  21 Dec 2008; Jeremy Olexa <darkside@gentoo.org> syslinux-3.71.ebuild:
  amd64 stable, bug 251816

*syslinux-3.72 (21 Dec 2008)

  21 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/syslinux-3.72-nopie.patch, +files/syslinux-3.72-nostrip.patch,
  +syslinux-3.72.ebuild:
  Bug #244775, version bump.

  25 Oct 2008; Zac Medico <zmedico@gentoo.org> syslinux-3.71.ebuild:
  Bug #244300 - Call `emake install` with MANDIR=/usr/share/man.

*syslinux-3.71 (03 Sep 2008)

  03 Sep 2008; Robin H. Johnson <robbat2@gentoo.org> +syslinux-3.71.ebuild:
  Version bump per bug #236554, also fix perl deps per bug 236597.

  19 Aug 2008; Dawid Węgliński <cla@gentoo.org> syslinux-3.52.ebuild:
  Add missing dev-perl/Digest-SHA1 to RDEPEND

  19 Aug 2008; Dawid Węgliński <cla@gentoo.org> syslinux-3.52.ebuild:
  Stable on amd64/x86 per bug #232197; add dev-perl/Crypt-PasswdMD5 to RDEPEND
  for missing perl module (thanks to mklimek@mklimek.org on IRC).

*syslinux-3.70 (21 Jul 2008)

  21 Jul 2008; <chainsaw@gentoo.org> +files/syslinux-3.70-nopie.patch,
  +files/syslinux-3.70-nostrip.patch, +syslinux-3.70.ebuild:
  Version bump, closes bug #203341. Hardened uclibc compile fix by Natanael
  Copa <natanael.copa@gmail.com>. Inhibit pre-stripping of binaries.

*syslinux-3.52 (24 Oct 2007)
*syslinux-3.51 (24 Oct 2007)

  24 Oct 2007; Steve Dibb <beandog@gentoo.org> +syslinux-3.51.ebuild,
  +syslinux-3.52.ebuild:
  Version bump
