@@ -20,6 +20,7 @@ DIST syslinux-3.70.tar.bz2 3286811 RMD160 ffea663c63e53691a9ec71923dfc782941e227
 DIST syslinux-3.71.tar.bz2 3288656 RMD160 b49717ecf72ca2e4d09e8917db679eb235e5fab7 SHA1 47d28545b589c7a8d0c999646651e382421e0756 SHA256 f4d7fcd080c5e3f6213c70c08ee373eba00ee1dc9e0aa72757d2b00abdd97765
 DIST syslinux-3.72.tar.bz2 3262688 RMD160 7536bf73517de8cdb5357a92abe53536fb199d2c SHA1 8c5610885cbf7dba47e8703b210b68d354d88b82 SHA256 dc19ea3e1297468d9b4c579aba1dd491c963a02887f7fb362c95c6f1c0567e90
 DIST syslinux-3.75.tar.bz2 3110916 RMD160 05e5202649bbf4c8835df41cd797cd452de65a76 SHA1 8b97a708c1dc8bcb0505fab59b143368ed25b60b SHA256 1161ef0c248b931a872b92b9fe29a1ad54be2428976f19b8d88a8aa95cb3d65f
+DIST syslinux-3.80.tar.bz2 3082600 RMD160 7f5dfd78e2992b17cd3486b350a3eb3b207e2b2e SHA1 3b474590b5a14bd4db47d315e9293288136777ab SHA256 0cee0e80b237832aa59593d4925d825aa227de6e156ec530928514067dd946d3
 EBUILD syslinux-1.76.ebuild 764 RMD160 c9ff7b4436f8a4a61a9c5a4515e00b757dc066bf SHA1 bafe376b39bf5ccc128969926f80a6feaf0ca6df SHA256 327e08ac927b558d06398d59840688448202dea1bf0a75b18fc73d5da0b9cef3
 EBUILD syslinux-2.13.ebuild 942 RMD160 01ffe8801e59e5c09bc29f9a8972349a6f2d65b7 SHA1 0509aeb7a50b44e9261a309b0472507918b3a37d SHA256 f7a270ff64d9d079c37ce6c07a782c912c1dd5277d07203eb7501d80de8b8ebc
 EBUILD syslinux-3.11.ebuild 1136 RMD160 ddf786688ea7308b96cb863c6fbd5cd8b9c33568 SHA1 f7cbad8a8719a16648e3d0de43e025d2ff6ca066 SHA256 6005b29651a89218c6e109d667be99e65ddd2880657bc8f9e92eef3a0c045751
@@ -32,5 +33,6 @@ EBUILD syslinux-3.70.ebuild 1123 RMD160 a843d67cccb8bbe944122cb1ad02d124719434dc
 EBUILD syslinux-3.71.ebuild 1205 RMD160 17884a766856748bd989634572fe22380f9bf177 SHA1 dee76fac4fbaec75ecb820166301c9432f0cfa2b SHA256 3e25b5d2a634e2b5256b4bafe83af0df8e5e45a31e5fefab289eb792743fc593
 EBUILD syslinux-3.72.ebuild 1217 RMD160 1e28df296260660238e3f589830bfd81132b1cf7 SHA1 84ffcd4252f0f5d9c7e7b6353819f7151b5e8c6a SHA256 98761b191a52df25fb5d3d6588b3683b6cbc8ccc95c552a88bdba9fa2a329091
 EBUILD syslinux-3.75.ebuild 1215 RMD160 3a2a7e69c982d0ade2db82bb8ec2f2d46c446ed5 SHA1 5a92e3623657d9684f04045626e8e122995b5a95 SHA256 aebcb889e00b20222ba8ee8b24e2cc2e8d8a777fdbebadfde4804889c7c97781
-MISC ChangeLog 7765 RMD160 d5b3b5ec93859b21775967359849cd0a4bc32093 SHA1 6e157e3b82bdc7f0365cbee5689a95f1ba192f53 SHA256 4b5ce9fcb097cd39027e2cd482161f80a0138877a11094d05bfdc787d6994389
+EBUILD syslinux-3.80.ebuild 1215 RMD160 5154d83c31d741ad9d8f0c9b03a3ef5d37bc6b48 SHA1 33133e87c62f6e4d21ba76e139de1cfa77046fda SHA256 c6b1d2a8c92f54e0c16ba0f57b85f1242e56c61eadad15c8b7cd6789f86e53e2
+MISC ChangeLog 7882 RMD160 f4a4e5c3dd4d97400311395d7178ac1293a42916 SHA1 89410ea4372323412b13cd3a76fedccfd773db6c SHA256 b2d249273374eef5ad25e6df662a4a1c18520f43e9ead4760673f8abca8f0392
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
